<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="false"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    android:padding="70dp"
    tools:ignore="LabelFor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/a_login_email"
        android:padding="10dp"
        android:text="@string/a_login_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/a_login_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/a_login_password"
        android:padding="10dp"
        android:text="@string/a_login_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/a_login_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:padding="20dp"
        android:text="@string/a_login_label_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/a_login_label_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NotRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/a_login_not_registered"
            android:text="@string/a_login_not_registered"
            />

        <TextView
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/a_login_sign_up"
            android:text="@string/a_login_sign_up"
            android:layout_marginLeft="10dp"
            android:onClick="processSignupLinkClick"/>
    </LinearLayout>


</LinearLayout>