<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activity.Edit_Profile_Activity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="379dp"
        android:layout_marginLeft="30dp"
        android:contentDescription="@string/Desc"
        app:srcCompat="@android:drawable/btn_star_big_on"/>

       <ImageView
           android:id="@+id/imageView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           app:srcCompat="@android:drawable/ic_menu_edit" />
   </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">



        <TextView
            android:id="@+id/ed_tv_new_Pswd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/a_r_new_pswd" />



        <EditText
            android:id="@+id/ed_et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="@string/a_login_password"
            />

    </LinearLayout>


</LinearLayout>